--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,11 @@ mdurl==0.1.2
 ordered-set==4.1.0
 packaging==24.1
 Pygments==2.18.0
+python-dotenv==1.0.1
 pytube==15.0.0
 requests==2.32.3
 rich==13.7.1
+sentry-sdk==2.12.0
 typing_extensions==4.12.2
 urllib3==2.2.2
 Werkzeug==3.0.3
